add read.me and improve swagger UI
